--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/server.js",
     "dev": "nodemon dist/server.js",
-    "build": "tsc --outDir dist"
+    "build": "cd monorepo && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
