--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/server.js",
     "dev": "nodemon dist/server.js",
-    "build": "cd monorepo && npm install && npm run build"
+    "build": "cd ../monorepo && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,6 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^4.18.2"
   }
 }
