--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js",
-    "dev": "nodemon dist/server.js",
-    "build": "cd ../monorepo && npm install && npm run build"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "cd ../monorepo && npm install && npm run build && cd ../server"
   },
   "keywords": [],
   "author": "",
