feat: more prod changes

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,16 +1,11 @@
 {
   "version": 2,
+  "buildCommand": "cd ../monorepo && npm install && npm run build",
+  "outputDirectory": "../monorepo/dist",
   "builds": [
     {
       "src": "server.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "../monorepo/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
     }
   ],
   "routes": [
@@ -19,8 +14,11 @@
       "dest": "server.js"
     },
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
-      "dest": "../monorepo/dist/$1"
+      "dest": "/index.html"
     }
   ]
 }
