feat: more prod changes

--- a/monorepo/vercel.json
+++ b/monorepo/vercel.json
@@ -11,14 +11,11 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server/server.js"
-    },
-    {
-      "handle": "filesystem"
+      "dest": "/server/server.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/server/server.js"
     }
   ]
 } 
