--- a/monorepo/vercel.json
+++ b/monorepo/vercel.json
@@ -8,12 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/server/server.js"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/server/server.js"
+      "dest": "server/server.js"
     }
   ]
 } 
