feat: more prod changes

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,13 @@
     {
       "src": "server/server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "monorepo/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "routes": [
@@ -12,8 +19,11 @@
       "dest": "/server/server.js"
     },
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/server/server.js"
+      "dest": "/monorepo/dist/$1"
     }
   ]
 }
