feat: more prod changes

--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,6 @@
     {
       "src": "server/server.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "monorepo/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
     }
   ],
   "routes": [
@@ -19,11 +12,8 @@
       "dest": "/server/server.js"
     },
     {
-      "handle": "filesystem"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/monorepo/dist/$1"
+      "dest": "/server/server.js"
     }
   ]
 }
