feat: more prod changes

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
       "dest": "/server/server.js"
     },
     {
+      "src": "/assets/(.*)",
+      "dest": "/monorepo/dist/assets/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/server/server.js"
     }
