--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "cd ../monorepo && npm install && npm run build && cd ../server"
+    "build": "node server.js"
   },
   "keywords": [],
   "author": "",
