feat: more prod changes

--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,9 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "server/server.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "monorepo/dist/**",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/server/server.js"
-    },
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/monorepo/dist/index.html"
-    }
-  ]
-}
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "/server/api.js"
+      }
+    ]
+  }
+  
